--- a/src/bootstraps/SocialMedia.css
+++ b/src/bootstraps/SocialMedia.css
@@ -1,9 +1,10 @@
 .fa {
-  padding: 20px;
-  font-size: 40px;
+  padding: 200px;
+  font-size: 400px;
   width: 50px;
+  height:50px;
   text-align: center;
-  text-decoration: none;
+  text-decoration-color: white;
   border-radius: 20%;
 
 }
@@ -16,6 +17,7 @@
   .fa-facebook {
     background: #3B5998;
     color: white;
+    text-decoration-color: white;
   }
   .fa-linkedin {
     background: #0077B5;
