--- a/src/views/projects/otherprojects/otherprojects.css
+++ b/src/views/projects/otherprojects/otherprojects.css
@@ -18,12 +18,12 @@
     background-color: black;
     opacity: 0.4;
     transition: opacity 1s ease-in-out;
-    -moz-transition: opacity 1s ease-in-out;
+    /* -moz-transition: opacity 1s ease-in-out; */
     -webkit-transition: opacity 1s ease-in-out;
 }
 .caption:hover{
     opacity: 0.8;
     transition: opacity .55s ease-in-out;
-    -moz-transition: opacity .55s ease-in-out;
+    /* -moz-transition: opacity .55s ease-in-out; */
     -webkit-transition: opacity .55s ease-in-out;
 }
