--- a/src/views/projects/project.css
+++ b/src/views/projects/project.css
@@ -19,10 +19,10 @@
     margin-left: auto;
     box-sizing: border-box;
     -webkit-column-count: 4;
-    -moz-column-count: 4;
+    /* -moz-column-count: 4; */
          column-count: 4;
  -webkit-column-width: 200px;
-    -moz-column-width: 200px;
+    /* -moz-column-width: 200px; */
          column-width: 200px;
 }
 
