--- a/src/views/projects/projectCards/templates/card.css
+++ b/src/views/projects/projectCards/templates/card.css
@@ -2,11 +2,11 @@
     
     border: solid 1px #555;
     box-shadow: 10px -10px 5px  rgba(0,0,0,0.6);
-    -moz-box-shadow: 10px -10px 5px  rgba(0,0,0,0.6);
+    /* -moz-box-shadow: 10px -10px 5px  rgba(0,0,0,0.6); */
     -webkit-box-shadow: 10px -10px 5px  rgba(0,0,0,0.6);
     -o-box-shadow: 10px -10px 5px  rgba(0,0,0,0.6);
     border-radius:25px;
-    position: center;
+    position: relative;
     margin: 20px;
     box-sizing: border-box;
     max-width: 1420px;
@@ -53,7 +53,7 @@
     border: solid 1px #555;
 
     box-shadow: 10px -10px 5px  rgba(0,0,0,0.6);
-    -moz-box-shadow: 10px -10px 5px  rgba(0,0,0,0.6);
+    /* -moz-box-shadow: 10px -10px 5px  rgba(0,0,0,0.6); */
     -webkit-box-shadow: 10px -10px 5px  rgba(0,0,0,0.6);
     -o-box-shadow: 10px -10px 5px  rgba(0,0,0,0.6);
     border-radius:25px;
